@startuml
title Final Project - Simplified Global Class Diagram

left to right direction
hide circle
hide methods
hide attributes

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam linetype ortho
skinparam backgroundColor white
skinparam defaultFontName Arial
skinparam packageStyle rectangle
skinparam nodesep 45
skinparam ranksep 55

skinparam Package {
  BorderColor #CBD5E1
  BackgroundColor #F8FAFC
  FontColor #0F172A
  FontSize 12
  FontStyle bold
}

skinparam Class {
  BorderColor #334155
  BackgroundColor #FFFFFF
  FontColor #0F172A
  HeaderBackgroundColor #E2E8F0
  FontSize 11
  FontStyle bold
}

skinparam Arrow {
  Color #64748B
  Thickness 1
  FontColor #334155
  FontSize 9
}

package "Users & Access" {
  class User
  class Role
  class Permission

  User "*" -- "*" Role : roles
  Role "*" -- "*" Permission : permissions
}

package "Academic" {
  class LanguageProgram
  class Course
  class CourseClass

  LanguageProgram "1" -- "*" Course
  Course "1" -- "*" CourseClass
}

package "Timetable" {
  class Schedule
  class Room
  class AttendanceRecord
  class TeacherResource

  CourseClass "1" -- "*" Schedule
  Schedule "*" -- "0..1" Room
  CourseClass "1" -- "*" AttendanceRecord
  CourseClass "1" -- "*" TeacherResource
}

package "Finance" {
  class StudentTuition
  class TuitionPayment
  class EmployeePayment
  class ScholarshipActivation

  StudentTuition "1" .. "*" TuitionPayment
}

package "Communication" {
  class Message
  class DatabaseNotification
  class Review
}

' Keep packages aligned horizontally
User -[hidden]-> LanguageProgram
LanguageProgram -[hidden]-> Schedule
Schedule -[hidden]-> StudentTuition
StudentTuition -[hidden]-> Message

' Important cross-module links only
User "1" -- "*" CourseClass : teaches
User "*" -- "*" CourseClass : enrolls

User "1" -- "0..1" StudentTuition : tuition
Course "1" -- "*" StudentTuition : price

User "1" -- "0..1" EmployeePayment : salary
User "1" -- "*" ScholarshipActivation : discounts

User "1" -- "*" Message : messages
User "1" -- "*" DatabaseNotification : notifications
User "1" -- "*" Review : reviews

@enduml